--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-searchbox",
   "version": "0.0.2",
-  "description": "React component for search box with autocomplete.",
+  "description": "React search box component.",
   "main": "./dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
